fix: update TopMenu styles for improved layout and spacing

--- a/src/components/TopMenu/TopMenu.css
+++ b/src/components/TopMenu/TopMenu.css
@@ -6,6 +6,7 @@
   justify-content: space-between;
   flex-direction: row;
   align-items: center;
+  width: 100%;
 }
 
 .top-menu img {
@@ -19,9 +20,9 @@
   display: flex;
   justify-content: space-between;
   flex-direction: row;
-  gap: 2rem;
+  gap: 5rem;
   padding: 0;
-  margin-right: 1rem;
+  margin-right: 5rem;
 }
 
 .list-item {
@@ -29,6 +30,7 @@
   text-decoration: none;
   color: var(--color-secondary);
   cursor: pointer;
+  font-size: 1.2rem;
 }
 
 .list-item:hover {
